# cmake-sources

./: README.md
command-line/: CMakeLists.txt
include-processor-count/: CMakeLists.txt
include-users/: CMakeLists.txt
include-users/modules/: MyModule.cmake
minimum-required-bad/: commands.txt  script.cmake
minimum-required-good/: commands.txt  script.cmake
modify-incorrect/: CMakeLists.txt  commands.txt
modify-path/: CMakeLists.txt  commands.txt
modify-path/standard/: ProcessorCount.cmake
path-to-module/: CMakeLists.txt
path-to-module/cmake/: mymodule.cmake
script/: commands.txt  create-file.cmake
simple-tree-binary-vars/: CMakeLists.txt
simple-tree-binary-vars/boo/: CMakeLists.txt
simple-tree-binary-vars/boo/bar/: CMakeLists.txt
simple-tree-binary-vars/boo/baz/: CMakeLists.txt
simple-tree-binary-vars/foo/: CMakeLists.txt
simple-tree-source-vars/: CMakeLists.txt
simple-tree-source-vars/boo/: CMakeLists.txt
simple-tree-source-vars/boo/bar/: CMakeLists.txt
simple-tree-source-vars/boo/baz/: CMakeLists.txt
simple-tree-source-vars/foo/: CMakeLists.txt
simple-tree/boo/: CMakeLists.txt
simple-tree/foo/: CMakeLists.txt
subdirectories/: CMakeLists.txt
subdirectories/boo/: CMakeLists.txt
subdirectories/boo/bar/: CMakeLists.txt
with-external-module-good/example/: CMakeLists.txt
with-external-module-good/example/boo/: CMakeLists.txt
with-external-module-good/example/boo/bar/: CMakeLists.txt
with-external-module/example/: CMakeLists.txt
with-external-module/example/boo/: CMakeLists.txt
without-command-line/: CMakeLists.txt
(+1 files in other folders)
